# Hurl

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  Directory.Packages.props  Hurl.sln  LICENSE  Program.cs  README.md  SECURITY.md  SECURITY.md.  build.ps1  global.json  package-lock.json  package.json  skim.csproj  skim.sln
.github/workflows/: release.yaml
App/: App.xaml  App.xaml.cs  AssemblyInfo.cs  Constants.cs  Hurl.BrowserSelector.csproj  Hurl.csproj  Hurl.sln  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  SelectionWindow.xaml  SelectionWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  app.csproj
App/Archive/: README.md
App/Browser/: BList.cs  Browser.cs
App/Common/: AssemblyInfo.cs
App/Constants/: Constants.cs  MetaStrings.cs  OtherStrings.cs  Setup.cs
App/Controls/: BrowserIconBtn.xaml  BrowserIconBtn.xaml.cs  BrowserStatusComponent.xaml  BrowserStatusComponent.xaml.cs
App/Converters/: AltLaunchParentConverter.cs
App/Helpers/: AutoRulesCheck.cs  CliArgs.cs  CursorPosition.cs  GetBrowsers.cs  IconExtractor.cs  JsonOperations.cs  RoundedCorners.cs  SettingsFile.cs  TimedBrowserSelect.cs
App/Hurl.Settings/: App.xaml  (+3 more)
Docs/: Edit-UserSettingsjson.md  README.md
Extensions/: README.md  install-nmh.ps1  nmh-manifest.json  package-lock.json  package.json
Installer/: App.xaml.cs  Installer.csproj  MainWindow.xaml  MainWindow.xaml.cs
Other/: README.md
Settings/: App.xaml  Hurl.Settings.csproj  package.json  pnpm-lock.yaml  tsconfig.json
Shared/: Shared.projitems  Shared.shproj
Source/: Meta.Shared.props  WinUIAotApp.Shared.props
Source/Launcher/: Cargo.toml  build.rs
Source/Launcher/src/: ipc.rs  main.rs  models.rs  utils.rs
Utils/: README.md  UserSettings.schema.json  build.ps1  install.ps1  install_dotnet.iss  installer.iss
app/: Browser.cs  BrowsersList.cs  Program.cs  app.csproj  browserlist.cs
(+401 files in other folders)
