[package]
name = "Launcher"
description = "Choose the browser on the click of a link"
version = "0.9.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
winresource = "0.1"

[dependencies]
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = true

[package.metadata.winresource]
ProductName = "Hurl"
LegalCopyright = "Copyright © 2024 Chanakya"
OriginalFilename = "Launcher.exe"
