[package]
name = "Launcher"
description = "Hurl"
version = "0.9.3"
edition = "2024"
build = "build.rs"

[build-dependencies]
winresource = "0.1"

[dependencies]
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = [
  "std",
  "derive",
], default-features = false }
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[package.metadata.winresource]
ProductName = "Hurl"
LegalCopyright = "Copyright © 2025 Chanakya"
OriginalFilename = "Launcher.exe"
FileVersion = "0.9.3.26"
